# bier_timer

./: Cargo.toml  README.md  Trunk.toml  index.html
src/: app.rs  lib.rs  main.rs
src/components/: mod.rs  preset_summary.rs  simple_counter.rs  timer_preset_button.rs  timer_tile.rs
src/helpers/: ambience.rs  drink.rs  mod.rs  timer_info.rs  timer_preset.rs
src/pages/: about.rs  home.rs  mod.rs
style/: main.scss
